# WAMros

./: AUTHORS  README  TODO
wam_msgs/: mainpage.dox  manifest.xml
wam_msgs/msg/: CartesianCoordinates.msg  CartesianOrientation.msg  CartesianPosition.msg  CartesianTargets.msg  HomogeneousMatrix.msg  JointAngles.msg  WamStatus.msg
wam_msgs/srv/: ActivePassive.srv  MoveToCart.srv  MoveToPos.srv  SwitchModes.srv
wamros/: CMakeLists.txt  Makefile  active.sh  mainpage.dox  manifest.xml  movecart.sh  recrepl.sh  start.sh  teleop.py
wamros/scripts/: gh.sh  gs.sh  gs_cart.sh  movecart.sh  recrepl.sh  runbag.py  teleop.py
wamros/src/: WamNode.cpp  WamNode.hpp  wamros_node.cpp
